--- a/cjs.tsconfig.json
+++ b/cjs.tsconfig.json
@@ -3,7 +3,6 @@
     "compilerOptions": {
         "module": "commonjs",
         "outDir": "./cjs",
-        "declaration": true,
-        "emitDeclarationOnly": true
+        "importHelpers": true
     } 
 }
