--- a/esm.tsconfig.json
+++ b/esm.tsconfig.json
@@ -2,7 +2,6 @@
     "extends": "./tsconfig.json",
     "compilerOptions": {
         "module": "esnext",
-        "outDir": "./esm",
-        "declaration": true
+        "outDir": "./esm"
     } 
 }
