--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 		"declare": "tsc -p declare.tsconfig.json",
 		"build": "pnpm run check && pnpm run clean && pnpm run cjs && pnpm run esm && pnpm run declare",
 		"clean": "rimraf cjs esm typings",
-		"pre:build": "pnpm run clean",
+		"pre:build": "clean",
 		"update:patch": "pnpm version patch",
 		"update:minor": "pnpm version minor",
 		"update:major": "pnpm version major",
@@ -40,29 +40,29 @@
 	"peerDependencies": {
 		"@types/react": ">=17.0.2",
 		"@types/react-dom": ">=17.0.2",
-		"echarts": "^5.3.3",
+		"echarts": "^5.5.0",
 		"react": ">=17.0.2",
 		"react-dom": ">=17.0.2"
 	},
 	"devDependencies": {
-		"@types/react": ">=17.0.2",
-		"@types/react-dom": ">=17.0.2",
-		"@typescript-eslint/eslint-plugin": "^5.13.0",
-		"@typescript-eslint/parser": "^5.13.0",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
+		"@typescript-eslint/eslint-plugin": "^7.11.0",
+		"@typescript-eslint/parser": "^7.11.0",
 		"echarts": "^5.5.0",
-		"eslint": "^8.10.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-config-standard": "^17.0.0-1",
-		"eslint-plugin-import": "^2.25.4",
-		"eslint-plugin-n": "^15.0.1",
+		"eslint": "^8.57.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-config-standard": "^17.1.0",
+		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-n": "^16.6.2",
 		"eslint-plugin-promise": "^6.0.0",
-		"eslint-plugin-react": "^7.29.3",
-		"eslint-plugin-react-hooks": "^4.3.0",
-		"prettier": "^2.4.0",
-		"react": ">=17.0.2",
-		"react-dom": ">=17.0.2",
-		"rimraf": "^3.0.2",
-		"tslib": "^2.4.0",
-		"typescript": "^4.6.3"
+		"eslint-plugin-react": "^7.34.2",
+		"eslint-plugin-react-hooks": "^4.6.2",
+		"prettier": "^3.2.5",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"rimraf": "^5.0.7",
+		"tslib": "^2.6.2",
+		"typescript": "^5.4.5"
 	}
 }
